# annobin

./: .gitignore  CONTRIBUTING  Makefile.am  Makefile.in  README.md  SECURITY.md  aclocal.m4  annobin-common.cc  annobin-common.h  annobin-global.h.in  configure  configure.ac  meson.build  meson_options.txt
annocheck/: Makefile.am  Makefile.in  annocheck.c  annocheck.h  built-by.c  hardened.c  libannocheck.h.in  libannocheck.pc  libannocheck.pc.in  meson.build  notes.c  size.c  timing.c
annocheck/libiberty/: cp-demangle.c  cplus-dem.c  d-demangle.c  lrealpath.c  rust-demangle.c  safe-ctype.c
clang-plugin/: Makefile.in  annobin.cpp  hello.c  meson.build
config/: annocheck.m4  debuginfod.m4  gcc-plugin.m4  libelf.m4
doc/: Makefile.am  Makefile.in  annobin.1  annobin.info  annobin.texi  annocheck.1  annotation.proposal.txt  built-by.1  check-abi.1  hardened.1  meson.build  run-on-binaries-in.1  texi2pod.pl
gcc-plugin/: Makefile.am  Makefile.in  aarch64.annobin.cc  annobin.cc  annobin.h  arm.annobin.cc  config.h.in  configure  configure.ac  dummy.annobin.cc  i686.annobin.cc  ltmain.sh  meson.build  mips.annobin.cc  powerpc.annobin.cc  riscv.annobin.cc  s390.annobin.cc  x86_64.annobin.cc
llvm-plugin/: Makefile.in  annobin.cpp  hello.c  hello.go  meson.build
scripts/: Makefile.am  Makefile.in  built-by  check-abi  hardened  make-release.sh  run-on-binaries-in
tests/: Makefile.am  Makefile.in  abi-test  active-checks-test  assembler-gap-test  atexit-test  atexit.c  clang-test  common.sh  compile-test  debuginfod-test  dynamic-notes-test  fast-test  fast.c  fortify-test  function-sections-test  future-test  gap.S  gaps-test  glibc-notes-test  go-fips-test  hardening-fail-test  hardening-test  hello.c  hello2.c  hello3.c  hello_hard.c  hello_lib.c  implicit-values-test  implicit.c  instrumentation-test  ldconfig-test  libannocheck-test  llvm-test  lto-test  main.c  meson.build  missing-notes-test  no-use-crypto.go  note-format-test  (+12 more)
