# copyright : Copyright (c) 2017-2024 Red Hat
# license   : GNU GPL v3 or later; see accompanying LICENSE file

option('clang-plugin',
  type: 'boolean',
  value: true,
  description: 'Whether the clang plugin should be built'
)

option('llvm-plugin',
  type: 'boolean',
  value: true,
  description: 'Whether the llvm plugin should be built'
)

option('annocheck',
  type: 'boolean',
  value: true,
  description: 'Whether annocheck should be built'
)

option('docs',
  type: 'boolean',
  value: true,
  description: 'Whether the documentation should be built'
)

option('debuginfod',
  type: 'feature',
  value: 'enabled',
  description: 'Whether to enabled debuginfod support'
)
