## copyright : Copyright (C) 2017-2024 Red Hat.
## license   : GNU GPL v3; see accompanying LICENSE file

## You should have received a copy of the GNU General Public License v3
## along with this program; see the file COPYING3.  If not see
## <http://www.gnu.org/licenses/>.

## Process this file with automake to produce Makefile.in.

dist_bin_SCRIPTS = built-by check-abi hardened run-on-binaries-in
